<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp"
    tools:context=".LoginActivty">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:adjustViewBounds="true"
        android:fitsSystemWindows="true"
        android:src="@drawable/kominfo" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="#000"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
        android:inputType="textFilter"
        android:textColor="#000"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/password"
        android:textColor="#000"
        android:textSize="14sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:textColor="#000"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="20dp"
        android:background="@color/design_default_color_primary"
        android:text="@string/register"
        android:textColor="#fff"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="40dp"/>
</LinearLayout>