<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp">

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                android:inputType="textFilter"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/email"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="5dp"
                android:inputType="textEmailAddress"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/nama_lengkap"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etNamaLengkap"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="#000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvSekolah"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/asal_sekolah"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etSekolah"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:textColor="#0000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alamat"
                android:textColor="#000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="top|left"
                android:lines="3"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="#000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/design_default_color_primary"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="14sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>